# hd_radar_ros2

./: LICENSE  Readme.md
hd_radar_driver/: CMakeLists.txt  package.xml
hd_radar_driver/config/: hd_radar_config.yaml
hd_radar_driver/docker/: Dockerfile.humble  build.sh  run_radar.sh  run_radar_rviz.sh
hd_radar_driver/include/crc16/: crc16_ccitt.hpp
hd_radar_driver/include/hd_radar_driver/: hd_radar_driver.hpp  hd_radar_structs.hpp
hd_radar_driver/include/hd_radar_driver/modules/: hd_radar_can.hpp  hd_radar_heat.hpp  hd_radar_pcl.hpp  hd_radar_raw.hpp
hd_radar_driver/launch/: hd_radar.launch.py
hd_radar_driver/rqt/: hd_radar_service_caller.perspective
hd_radar_driver/rviz/: hd_radar_multiple.rviz  hd_radar_single.rviz
hd_radar_driver/scripts/: rosbag2_converter.py
hd_radar_driver/src/: hd_radar_driver.cpp  hd_radar_node.cpp
hd_radar_driver/src/modules/: hd_radar_can.cpp  hd_radar_heat.cpp  hd_radar_pcl.cpp  hd_radar_raw.cpp
hd_radar_interfaces/: CMakeLists.txt  package.xml
hd_radar_interfaces/msg/: Heat.msg  Raw.msg
hd_radar_interfaces/srv/: GetRaw.srv  SetMode.srv  SetThr.srv  SetVel.srv
